# Grand-Unified-Bash-Catalogue

./: README.md
Terminal_Project/: PKGBUILD  pyproject.toml
